# rust_game_of_life

./: Cargo.toml
console/: Cargo.toml  map
console/src/: main.rs
lib/: Cargo.toml
lib/src/: manager.rs
opengl/: Cargo.toml
opengl/src/: main.rs
