[package]
name = "opengl"
version = "0.1.0"
authors = ["Pascal <pascal@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_of_life = {version = "0.1.0", path = "../lib"}
piston = "0.42.0"
piston_window = "0.89.0"
vecmath = "0.3.1"
find_folder = "0.3.0"
